unit_tests/preprocessor/errors/failing-short-circuit-and.correct
preprocessor/errors/failing-short-circuit-and:1: error: division by zero
